# labs-2and3

./: CMakeLists.txt  algorithms.h  array_sequence.h  bit.h  bit_sequence.h  dynamic_array.h  exceptions.h  immutable_piecewise_function.h  linked_list.h  list_sequence.h  main.cpp  mutable_list_sequence.h  mutable_piecewise_function.h  option.h  piecewise_operators.h  sequence.h  sequence_crtp.h  tests.cpp  tests_piecewise.cpp
